@@ -1,3 +1,10 @@
+2007-02-21  Stefan Jahn  <stefan@lkcc.org>
+
+	* environment.cpp: Copy variable content if necessary.
+
+	* check_netlist.cpp: Don't come across root components twice when
+	expanding subcircuits.
+
 2007-02-20  Stefan Jahn  <stefan@lkcc.org>
 
 	* variable.h (class variable): Allowing variables to references
